chore: continue if the task has not been found